src/app/app.component.scss
@use '@angular/material' as mat;

:host {
  height: 100%;
  min-width: min-content;

  display: flex;
  flex-direction: column;

  &>* {
    flex: none;
  }

  &>.content {
    flex: 1;
  }
}

mat-toolbar {
  gap: 16px;
  @include mat.form-field-density(-4);

  &>* {
    flex: none;
  }

  &>mat-form-field {
    width: 256px;
  }

  &>.toolbar-spacer {
    flex: 1;
  }
}

.content {
  padding: 40px;
}

.img-drop-container {
  height: 100%;
  contain: paint;

  &:has(>canvas) {
    min-height: 400px;
    contain: strict;
  }
}

.img-drop-indicator {
  position: absolute;
  inset: 0;
  border: 10px dashed transparent;
  pointer-events: none;
}

.img-drop-indicator.img-drop-active {
  border-color: var(--mat-sys-primary);
}

.img-drop-help {
  width: 100%;
  height: 100%;

  border: 10px dashed var(--mat-sys-outline);
  padding: 16px;

  font: var(--mat-sys-title-large);
  letter-spacing: var(--mat-sys-title-large-tracking);

  display: flex;
  flex-direction: column;
  justify-content: center;

  &>* {
    flex: 1;
  }

  &>.help-contents {
    flex: none;
  }
}

.help-contents {
  padding-block: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.help-or {
  font: var(--mat-sys-body-medium);
  letter-spacing: var(--mat-sys-body-medium-tracking);
  font-style: italic;
  margin: 1em 0;
}

.help-or::before {
  content: "- ";
}

.help-or::after {
  content: " -";
}

.example-inputs-wrapper {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-end;
}

.example-help {
  text-align: center;
  font: var(--mat-sys-body-large);
  letter-spacing: var(--mat-sys-body-large-tracking);
  padding-block: 8px;
}

.example-inputs {
  height: 120px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 16px;

  &>button img {
    display: block;
    max-height: 120px;
    max-width: 200px;

    filter: brightness(.5);
  }

  &>button:hover img,
  &>button:focus img {
    filter: none;
  }
}

.img-display {
  display: block;
  width: 100%;
  height: 100%;
}

.glyphs-container {
  position: absolute;
  inset: 0;
  transform-origin: 0 0;

  & details {
    position: absolute;
    z-index: auto;

    &:hover {
      z-index: 2;
    }

    &>summary {
      display: block;
      cursor: pointer;
    }

    &[open] {
      z-index: 1;

      &>summary {
        background: #000;
      }
    }
  }
}

